--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 node_modules
-/dist
+dist
 
 
 # local env files
@@ -22,5 +22,5 @@ pnpm-debug.log*
 *.sln
 *.sw?
 .idea
-/target
+target
 *.iml
