--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.25.1",
+    "element-ui": "^2.15.9",
     "vue": "^2.7.10",
     "vue-router": "^3.6.5"
   },
